Tvoj opis commita

--- a/src/app/components/emergency-page/emergency-contacts.component.html
+++ b/src/app/components/emergency-page/emergency-contacts.component.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 <div class="message">
-  <p>Hello, my name is [Your Name]. I need help with an emergency. [Briefly explain the situation]. Please send assistance immediately. Thank you.</p>
+  <p>Example how to talk to emergency numbers:<br>Hello, my name is [Your Name]. I need help with an emergency. [Briefly explain the situation and tell location]. Please send assistance immediately. Thank you.</p>
 </div>
 
 <h2>Group Guides</h2>
