--- a/src/app/components/weekly-menu/weekly-menu.component.html
+++ b/src/app/components/weekly-menu/weekly-menu.component.html
@@ -12,7 +12,7 @@
     *ngFor="let day of days"
     (click)="selectDay(day)"
     [class.selected]="activeDay === day">
-    {{ day }}
+    {{ getDayName(day) }}
   </button>
 </nav>
 
