--- a/src/app/components/lost-and-found/lost-and-found-page.component.scss
+++ b/src/app/components/lost-and-found/lost-and-found-page.component.scss
@@ -14,11 +14,11 @@
     justify-content: center;
 
    img {
-    max-width: 400px;
-    width: 100%;
+    max-width: 600px;
+    width: 120%;
     height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    /*border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);*/
   }
 
   }
