--- a/src/app/components/weekly-menu/weekly-menu.component.html
+++ b/src/app/components/weekly-menu/weekly-menu.component.html
@@ -18,6 +18,17 @@
 
 <section>
   <h2>Breakfast</h2>
+
+  <div class="ornamental-divider">
+  <div class="line"></div>
+  <img
+    class="ornament-image"
+    src="/assets/images/meni - border.png"
+    alt="ornamental divider"
+  />
+  <div class="line"></div>
+</div>
+
   <ul>
     <li *ngFor="let item of menuItems[activeType][activeDay].breakfast">
       {{ item }}
@@ -25,16 +36,38 @@
   </ul>
 
   <h2>Lunch</h2>
+  <div class="ornamental-divider">
+  <div class="line"></div>
+  <img
+    class="ornament-image"
+    src="/assets/images/meni - border.png"
+    alt="ornamental divider"
+  />
+  <div class="line"></div>
+</div>
   <ul>
     <li *ngFor="let item of menuItems[activeType][activeDay].lunch">
       {{ item }}
     </li>
   </ul>
 
-  <h2>Dinner</h2>
-  <ul>
-    <li *ngFor="let item of menuItems[activeType][activeDay].dinner">
-      {{ item }}
-    </li>
-  </ul>
+  <!-- Dinner section wrapped in .wave-section 
+  <div class="wave-section">
+    <div class="wave-top"></div>
+    <div class="wave-content">-->
+      <h2>Dinner</h2>
+      <div class="ornamental-divider">
+  <div class="line"></div>
+  <img
+    class="ornament-image"
+    src="/assets/images/meni - border.png"
+    alt="ornamental divider"
+  />
+  <div class="line"></div>
+</div>
+      <ul>
+        <li *ngFor="let item of menuItems[activeType][activeDay].dinner">
+          {{ item }}
+        </li>
+      </ul>
 </section>
