--- a/src/app/components/weekly-menu/weekly-menu.component.scss
+++ b/src/app/components/weekly-menu/weekly-menu.component.scss
@@ -1,3 +1,5 @@
+//@import url('https://fonts.cdnfonts.com/css/borel');
+
 :host {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,7 @@
   padding: 20px;
   background-color: #161139;
   color: #fff;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Lucida Calligraphy', sans-serif;
   min-height: calc(100vh - 100px);
 }
 
@@ -72,27 +74,90 @@ section {
     font-size: 1.8rem;
     color: #f2bb51;
     margin-top: 20px;
+    //border-bottom: 1px ridge rgba(211, 220, 50, 0.6);
   }
 
+  //meni - kontejner
   ul {
     list-style: none;
     margin: 12px auto;
     padding: 0;
-    text-align: left;
-    background: #000;
+    text-align: center;
     border-radius: 8px;
     padding: 10px 20px;
+    color: #abbdf0;
   }
 
   li {
-    padding: 8px 0;
-    border-bottom: 1px solid #333;
+    padding: 1px 0;
+    //border-bottom: 1px dashed #fff;
 
     &:last-child {
       border-bottom: none;
     }
   }
 }
+
+.svg-divider {
+  width: 100%;
+  height: 50px;
+  overflow: hidden;
+  margin: -10px 0 20px 0;
+
+  svg {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+}
+
+/*.wave-section {
+  position: relative;
+  background-color: #f2bb51; // boja donje sekcije
+  color: white;
+  margin-top: 50px;
+
+  .wave-top {
+    position: absolute;
+    top: -1px;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: url("data:image/svg+xml;utf8,<svg viewBox='0 0 1440 320' xmlns='http://www.w3.org/2000/svg'><path fill='%23ffffff' d='M0,224L48,213.3C96,203,192,181,288,186.7C384,192,480,224,576,240C672,256,768,256,864,229.3C960,203,1056,149,1152,133.3C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z'/></svg>") no-repeat;
+    background-size: cover;
+    z-index: 2;
+  }
+
+  .wave-content {
+    position: relative;
+    z-index: 3;
+    padding: 60px 20px 40px;
+    text-align: center;
+  }
+}*/
+
+.ornamental-divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+
+  .line {
+    flex: 1;
+    height: 1px;
+    background-color: #f2bb51; // svetloplava boja
+    opacity: 0.5;
+  }
+
+  .ornament-image {
+    margin: 0 20px;
+    height: 40px;
+    width: auto;
+    opacity: 0.9;
+    align-self: center;
+  }
+}
+
 
 @media (max-width: 768px) {
   .toggle-group,
@@ -103,6 +168,8 @@ section {
 
   section h2 {
     font-size: 1.5rem;
+    letter-spacing: 2.5mm;
+    align-self: center;
   }
 
   section ul {
@@ -110,6 +177,6 @@ section {
   }
 
   section li {
-    font-size: 0.95rem;
+    font-size: 1.3rem;
   }
 }
