--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- app.component.html -->
 <div class="main-container">
 
   <header class="header">
@@ -17,6 +18,7 @@
   </main>
 
   <app-bottom-nav></app-bottom-nav>
+  
   <footer class="footer">
     <p>&copy; 2025 ISWIB. All rights reserved. Made by IT Team, and friends ®</p>
   </footer>
