--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -71,9 +71,13 @@ body {
 
 /* Footer */
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #5566ca;
   color: #fff;
   padding: 10px;
   text-align: center;
   width: 100%;
+  height: 50px;
 }
