--- a/src/app/components/events/events.component.scss
+++ b/src/app/components/events/events.component.scss
@@ -54,8 +54,9 @@
     min-width: 60px;
 
     &.active {
-      border-bottom: 3px solid #5566ca;
+      border-bottom: 3px solid #f2bb51;
       font-weight: bold;
+      color: #f2bb51;
     }
   }
 }
@@ -148,8 +149,8 @@
     }
 
     img {
-      width: 24px;
-      height: 24px;
+      width: 50px;
+      height: 50px;
     }
   }
 }
