--- a/src/app/components/weekly-menu/weekly-menu.component.scss
+++ b/src/app/components/weekly-menu/weekly-menu.component.scss
@@ -13,6 +13,7 @@
 
 .toggle-group {
   display: flex;
+  justify-content: center;
   flex-wrap: nowrap;
   overflow-x: auto;
   gap: 10px;
@@ -39,7 +40,8 @@
 
 .days-nav {
   display: flex;
-  flex-wrap: nowrap;
+  justify-content: center;
+  flex-wrap: wrap;
   overflow-x: auto;
   gap: 10px;
   margin-bottom: 30px;
@@ -48,6 +50,8 @@
 
   button {
     padding: 10px 14px;
+    box-sizing: border-box; 
+    width: fit-content;
     border: 2px solid #f2bb51;
     background: transparent;
     color: #fff;
