--- a/src/app/components/currency-converter-page/currency-converter-page.component.html
+++ b/src/app/components/currency-converter-page/currency-converter-page.component.html
@@ -2,22 +2,15 @@
   <h1>Currency Converter to RSD</h1>
 
   <div class="converter-box">
+    <label for="amount">Amount:</label>
+    <input type="number" [(ngModel)]="amount" placeholder="Enter amount" />
+
     <label for="currency">Currency:</label>
-    <ng-select
-    [items]="currencyOptions"
-    bindLabel="label"
-    bindValue="code"
-    [(ngModel)]="selectedCurrency"
-    [placeholder]="!selectedCurrency ? 'Select currency' : ''"
-    [searchable]="true"
-    appendTo="body"
-    class="custom-ng-select">
-  </ng-select>
-<<<<<<< HEAD
-
-
-=======
->>>>>>> 03bbe79 (tami - modifikacije)
+    <select [(ngModel)]="selectedCurrency">
+      <option *ngFor="let key of exchangeRates | keyvalue" [value]="key.key">
+        {{ key.key }}
+      </option>
+    </select>
 
     <button (click)="convertToRSD()">Convert</button>
 
