--- a/src/app/components/currency-converter-page/currency-converter-page.component.html
+++ b/src/app/components/currency-converter-page/currency-converter-page.component.html
@@ -6,11 +6,16 @@
     <input type="number" [(ngModel)]="amount" placeholder="Enter amount" />
 
     <label for="currency">Currency:</label>
-    <select [(ngModel)]="selectedCurrency">
-      <option *ngFor="let key of exchangeRates | keyvalue" [value]="key.key">
-        {{ key.key }}
-      </option>
-    </select>
+    <ng-select
+    [items]="currencyOptions"
+    bindLabel="label"
+    bindValue="code"
+    [(ngModel)]="selectedCurrency"
+    [placeholder]="!selectedCurrency ? 'Select currency' : ''"
+    [searchable]="true"
+    appendTo="body"
+    class="custom-ng-select">
+  </ng-select>
 
     <button (click)="convertToRSD()">Convert</button>
 
