--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -2,17 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 80vh;  /* Prilagodite visinu u odnosu na header i footer */
   flex-direction: column;
   background-color: #161139;
-  justify-self: center;
+  padding: 20px;
 }
 
 .circle-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr); /* 3 kolone */
   gap: 20px;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1200px; /* Opcionalno, da se ograniči širina */
 }
 
 .circle {
@@ -29,7 +30,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
 }
 
 .circle-image {
@@ -43,21 +43,10 @@
 }
 
 .circle:hover .circle-image {
-  transform: scale(1.1);
+  transform: scale(1.1); /* Povećanje slike pri hoveru */
 }
 
 .circle p {
   font-size: 1rem;
   color: #ffffff;
-}
-
-@media (max-width: 480px) {
-  .circle-image {
-    width: 60px;
-    height: 60px;
-  }
-
-  .circle-content p {
-    font-size: 0.75rem;
-  }
 }
