--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -50,3 +50,19 @@
   font-size: 1rem;
   color: #ffffff;
 }
+
+@media (max-width: 480px) {
+  .main-content {
+    min-height: 70dvh;
+    padding: 0px;
+  }
+
+  .circle-image {
+    width: 60px;
+    height: 60px;
+  }
+
+  .circle-content p {
+    font-size: 0.75rem;
+  }
+}
