--- a/src/app/components/game/tictactoe.component.scss
+++ b/src/app/components/game/tictactoe.component.scss
@@ -4,9 +4,12 @@
   flex-direction: column;
   align-items: center;
   font-family: Arial, sans-serif;
-  margin-top: 20px;
   position: relative; /* Added relative positioning for absolutely positioned elements within the game */
   // overflow: hidden; /* Removed overflow from here, moved to .board */
+
+  h1 {
+    margin: 0;
+  }
 
  .status-message {
   background-color: rgba(255, 255, 255, 0.07);
